<resources>
    <string name="app_name">Hexiwear_Read_app</string>
    <string name="Title">READ MOTION SENSORS</string>
    <string name="EnableBluetooth" >Enable Bluetooth</string>
    <string name="ScanDevices">Scan Devices</string>
    <string name="Name">Name\n</string>
    <string name="Address">Address</string>
    <string name="Connect">Connect</string>
    <string name="NO_BLUETOOTH">this device does not have Bluetooth</string>
    <string name="Record">Record</string>
    <string name="Stop">Stop record</string>
    <string name="Disconnect">Disconnect</string>
    <string name="DeviceConnected">Connected to Hexiwear</string>
    <string name="DeviceDisconnect">Disconnected to Hexiwear</string>
    <string name="FailRead">Read failed</string>
    <string name="InvalidAcData">Invalid data length for Accelerometer Data</string>
    <string name="InvalidMagData">Invalid data length for Magnetometer Data</string>
    <string name="InvalidGyrData">Invalid data length for Gyroscope Data</string>
    <string name="NotFound">Characteristic not found</string>
    <string name="ServiceNF">Service not found</string>
    <string name="ErrorFile">Error creating the file</string>
    <string name="UnknowFormart">Unknow Characteristic</string>
    <string name="InvalidPressData">Invalid data length for Pressure Data</string>
    <string name="ConfirmWarning">Confirming emergency...</string>
    <string name="NoMovement">Repeat movement to confirm emergency</string>
    <string name="StopWarning">Non-emergency</string>
    <string name="UserName">Name</string>
    <string name="UserSurName">Surname</string>
    <string name="ContactPhone">Contact Number</string>
    <string name="UserData">Enter user data</string>
    <string name="EmptyFile">Empty File</string>
    <string name="EmergencyMode">Emergency Mode</string>
    <string name="RecordMode">Record Mode</string>
    <string name="Menu">Back to home menu</string>
    <string name="MotionTag">Motion Tag</string>
    <string name="Tag">Tag</string>
    <string name="SendTag">Add tag to file</string>
    <string name="Calibration">threshold self-calibration</string>
    <string name="MovementDescription">Lower your arm and quickly rotate your wrist from left to right for about 6 seconds.</string>
    <string name="Start">Start</string>
    <string name="Umbrales">Tresholds</string>
    <string name="DefaultThersholds">Default Thresholds</string>
    <string name="RequiredUserData">You must enter the user details</string>
    <string name="IncorrectData">Invalid data format</string>
</resources>