<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMovement"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/MovementDescription"
            android:textAlignment="center"
            android:textSize="33sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btStartCalibration"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="#E31414"
            android:onClick="onClickStartCalibration"
            android:text="@string/Start" />

        <Button
            android:id="@+id/btStopCalibration"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="#877474"
            android:onClick="onClickStopCalibration"
            android:text="@string/Stop" />
    </LinearLayout>

    <Button
        android:id="@+id/btReturnEmergency"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="#50B1A8"
        android:onClick="onCLickEmergencyMode"
        android:text="@string/EmergencyMode" />

    <Button
        android:id="@+id/btDefault"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="#7ABCB5"
        android:onClick="onClickDefault"
        android:text="@string/DefaultThersholds" />
</LinearLayout>