<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="335dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btRecord"
                android:layout_width="164dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#E31414"
                android:onClick="onClickRead"
                android:text="@string/Record" />

            <Button
                android:id="@+id/btStop"
                android:layout_width="wrap_content"
                android:layout_height="176dp"
                android:layout_weight="1"
                android:backgroundTint="#877474"
                android:onClick="onClickStop"
                android:text="@string/Stop" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="203dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvMotionTag"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/MotionTag" />

            <EditText
                android:id="@+id/etTag"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/Tag" />

        </LinearLayout>

        <Button
            android:id="@+id/btSendTag"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:backgroundTint="#7ABCB5"
            android:onClick="onClickSendTag"
            android:text="@string/SendTag" />

    </LinearLayout>

    <Button
        android:id="@+id/btRegresar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="#50B1A8"
        android:onClick="onClickReturn"
        android:text="@string/Menu" />

</LinearLayout>