<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="139dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Title"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btEnable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#50B1A8"
            android:enabled="false"
            android:onClick="onClickEnableBluetooth"
            android:text="@string/EnableBluetooth" />

        <Button
            android:id="@+id/btScan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#50B1A8"
            android:enabled="false"
            android:onClick="onClickScan"
            android:text="@string/ScanDevices" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="217dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Name" />

            <TextView
                android:id="@+id/tvDeviceName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/Name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Address" />

            <TextView
                android:id="@+id/tvDevAaddress"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/Address" />
        </LinearLayout>

        <Button
            android:id="@+id/btConnecct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#50B1A8"
            android:enabled="false"
            android:onClick="onClickConnect"
            android:text="@string/Connect" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/UserName" />

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/UserName"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvUserSurName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/UserSurName" />

            <EditText
                android:id="@+id/etUserSurname"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/UserSurName"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ContactPhone" />

            <EditText
                android:id="@+id/etContactPhone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ContactPhone"
                android:inputType="text" />
        </LinearLayout>

        <Button
            android:id="@+id/btUserData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#50B1A8"
            android:onClick="onClickUserData"
            android:text="@string/UserData" />
    </LinearLayout>

</LinearLayout>