<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="456dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btDisconnect"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:backgroundTint="#F44336"
            android:onClick="onClickDisconnect"
            android:text="@string/Disconnect" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btEmergencia"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:backgroundTint="#50B1A8"
            android:onClick="onClickEmergencyMode"
            android:text="@string/EmergencyMode" />

        <Button
            android:id="@+id/btRecordMode"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:backgroundTint="#50B1A8"
            android:onClick="onClickRecordMode"
            android:text="@string/RecordMode" />

    </LinearLayout>

</LinearLayout>